--- a/create.html
+++ b/create.html
@@ -33,7 +33,18 @@
 <script type="module">
   import { WEBAPP_URL } from './js/auth.js';
   async function j(u){ const r=await fetch(u); return r.json(); }
-  async function post(body){ const r=await fetch(WEBAPP_URL,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(body)}); const out=await r.json(); if(out.error) throw new Error(out.error); return out; }
+  async function post(bodyObj){
+    const r = await fetch(WEBAPP_URL, {
+      method: 'POST',
+      headers: { 'Content-Type': 'text/plain;charset=utf-8' },
+      body: JSON.stringify(bodyObj),
+    });
+    const text = await r.text();
+    let out;
+    try { out = JSON.parse(text); } catch { throw new Error('Bad JSON from server: ' + text.slice(0,200)); }
+    if (out.error) throw new Error(out.error);
+    return out;
+  }
 
   const boards = await j(`${WEBAPP_URL}?route=api/ui/boards`);
   board.innerHTML = '<option value="">Select a board/committee…</option>' + boards.map(b=>`<option value="${b.board_id}">${b.name}</option>`).join('');
