--- a/revise.html
+++ b/revise.html
@@ -38,41 +38,60 @@
 <script type="module">
   import { WEBAPP_URL } from './js/auth.js';
 
-  async function j(u){ const r=await fetch(u); return r.json(); }
-async function post(bodyObj){
-  const r = await fetch(WEBAPP_URL, {
-    method: 'POST',
-    headers: { 'Content-Type': 'text/plain;charset=utf-8' },
-    body: JSON.stringify(bodyObj),
-  });
-  const text = await r.text();
-  let out;
-  try { out = JSON.parse(text); } catch { throw new Error('Bad JSON from server: ' + text.slice(0,200)); }
-  if (out.error) throw new Error(out.error);
-  return out;
-}  function toB64(file){ return new Promise(res=>{ const fr=new FileReader(); fr.onload=()=>res(fr.result.split(',')[1]); fr.readAsDataURL(file); }); }
+  async function j(u){ const r=await fetch(u); if(!r.ok) throw new Error('Failed to load: '+r.status); return r.json(); }
+  async function post(bodyObj){
+    const r = await fetch(WEBAPP_URL, {
+      method: 'POST',
+      headers: { 'Content-Type': 'text/plain;charset=utf-8' }, // avoid preflight
+      body: JSON.stringify(bodyObj),
+    });
+    const text = await r.text();
+    let out;
+    try { out = JSON.parse(text); } catch { throw new Error('Bad JSON from server: ' + text.slice(0,200)); }
+    if (out.error) throw new Error(out.error);
+    return out;
+  }
+  function toB64(file){ return new Promise(res=>{ const fr=new FileReader(); fr.onload=()=>res(fr.result.split(',')[1]); fr.readAsDataURL(file); }); }
 
-  const meetings = await j(`${WEBAPP_URL}?route=api/public/meetings&limit=20`);
-  meetingSel.innerHTML = '<option value="">Select a meeting…</option>' + meetings.map(m=>`<option value="${m.meeting_id}">${m.date} — ${m.board_name||''} — ${m.title||''}</option>`).join('');
+  // Load next 20 meetings (soonest first)
+  const meetingSel = document.getElementById('meetingSel');
+  try {
+    const meetings = await j(`${WEBAPP_URL}?route=api/public/meetings&limit=20`);
+    meetingSel.innerHTML = (meetings && meetings.length)
+      ? '<option value="">Select a meeting…</option>' + meetings.map(m=>`<option value="${m.meeting_id}">${m.date} — ${m.board_name||''} — ${m.title||''}</option>`).join('')
+      : '<option value="">No meetings found</option>';
+  } catch (e) {
+    meetingSel.innerHTML = '<option value="">Could not load meetings (check WEBAPP_URL)</option>';
+  }
+
+  const filesRoot = document.getElementById('files');
   meetingSel.onchange = async ()=>{
-    const mid = meetingSel.value; if(!mid){ files.innerHTML=''; return; }
-    const fs = await j(`${WEBAPP_URL}?route=api/public/files&meeting_id=${encodeURIComponent(mid)}`);
-    files.innerHTML = fs.length? fs.map(x=>`<div class="card"><a class="btn" target="_blank" href="${x.url}">${x.label||x.type}</a></div>`).join('') : '<div class="muted">No public documents yet.</div>';
+    const mid = meetingSel.value; if(!mid){ filesRoot.innerHTML=''; return; }
+    try{
+      const fs = await j(`${WEBAPP_URL}?route=api/public/files&meeting_id=${encodeURIComponent(mid)}`);
+      filesRoot.innerHTML = fs.length
+        ? fs.map(x=>`<div class="card"><a class="btn" target="_blank" href="${x.url}">${x.label||x.type}</a></div>`).join('')
+        : '<div class="muted">No public documents yet.</div>';
+    }catch(e){
+      filesRoot.innerHTML = `<div class="card" style="border-color:#f66"><b>Error:</b> ${e.message}</div>`;
+    }
   };
 
   async function upload(kind){
-    const mid=meetingSel.value; const file=document.getElementById('file').files[0]; const note=document.getElementById('note').value; const email=document.getElementById('email').value.trim();
-    if(!mid) return alert('Choose a meeting'); if(!file) return alert('Choose a file');
-    const file_b64 = await toB64(file);
+    const mid=meetingSel.value, file=document.getElementById('file').files[0], note=document.getElementById('note').value, email=document.getElementById('email').value.trim();
+    if(!mid) return alert('Choose a meeting');
+    if(!file) return alert('Choose a file');
+
     try{
+      const file_b64 = await toB64(file);
       await post({action:'submit_file_open', meeting_id:mid, type:kind, file_b64, mimeType:file.type||'application/octet-stream', fileName:file.name, note, submitterEmail:email});
       alert(kind==='exhibit' ? 'Exhibit published' : 'Submitted for Clerk approval');
       meetingSel.onchange();
     }catch(e){ alert(e.message); }
   }
-  btnAgenda.onclick = ()=>upload('agenda');
-  btnPacket.onclick = ()=>upload('packet');
-  btnExhibit.onclick = ()=>upload('exhibit');
+  document.getElementById('btnAgenda').onclick = ()=>upload('agenda');
+  document.getElementById('btnPacket').onclick = ()=>upload('packet');
+  document.getElementById('btnExhibit').onclick = ()=>upload('exhibit');
 </script>
 </body>
 </html>
